--- a/d2.html
+++ b/d2.html
@@ -36,11 +36,11 @@
         }
 
         h1 {
-            font-size: 1.2rem;
-            text-shadow: 0 0 5px #fff;
-            letter-spacing: 2px;
+            font-size: 1.5rem;
+            text-shadow: 0 0 6.25px #fff;
+            letter-spacing: 2.5px;
             text-align: center;
-            padding: 8px 0;
+            padding: 10px 0;
         }
 
         .container {
@@ -49,18 +49,18 @@
             max-width: 100vw;
             display: flex;
             flex-direction: column;
-            gap: 8px;
-            padding: 8px;
+            gap: 10px;
+            padding: 10px;
         }
 
         .visualizer {
-            width: 150px;
-            height: 150px;
+            width: 187.5px;
+            height: 187.5px;
             margin: 0 auto;
             background: rgba(10, 10, 10, 0.9);
-            border: 2px solid #fff;
-            border-radius: 8px;
-            box-shadow: 0 0 8px #fff, inset 0 0 4px rgba(255, 255, 255, 0.2);
+            border: 2.5px solid #fff;
+            border-radius: 10px;
+            box-shadow: 0 0 10px #fff, inset 0 0 5px rgba(255, 255, 255, 0.2);
             position: relative;
             overflow: hidden;
             background-image: linear-gradient(
@@ -81,14 +81,14 @@
         .visualizer::before {
             content: '';
             position: absolute;
-            width: 8px;
-            height: 8px;
+            width: 10px;
+            height: 10px;
             background: #f00;
             border-radius: 50%;
             top: 50%;
             left: 50%;
             transform: translate(-50%, -50%);
-            box-shadow: 0 0 8px #f00;
+            box-shadow: 0 0 10px #f00;
         }
 
         canvas {
@@ -99,39 +99,45 @@
 
         .drum-rack, .controls {
             background: rgba(10, 10, 10, 0.9);
-            border: 2px solid #fff;
-            border-radius: 8px;
-            padding: 8px;
-            box-shadow: 0 0 8px #fff, inset 0 0 4px rgba(255, 255, 255, 0.2);
+            border: 2.5px solid #fff;
+            border-radius: 10px;
+            padding: 10px;
+            box-shadow: 0 0 10px #fff, inset 0 0 5px rgba(255, 255, 255, 0.2);
             transition: all 0.3s ease;
         }
 
         .drum-rack:hover, .controls:hover {
-            box-shadow: 0 0 12px #fff, inset 0 0 8px rgba(255, 255, 255, 0.4);
+            box-shadow: 0 0 15px #fff, inset 0 0 10px rgba(255, 255, 255, 0.4);
         }
 
         h2 {
-            font-size: 0.7rem;
-            margin: 0 0 6px 0;
+            font-size: 0.875rem;
+            margin: 0 0 7.5px 0;
             color: #fff;
-            text-shadow: 0 0 3px #fff;
+            text-shadow: 0 0 3.75px #fff;
         }
 
         .drum-pads {
             display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(60px, 1fr));
-            gap: 6px;
+            grid-template-columns: repeat(auto-fit, minmax(50px, 1fr));
+            gap: 7.5px;
         }
 
         .drum-pad {
             background: #1a1a1a;
             color: #fff;
-            border: 1px solid #fff;
-            border-radius: 4px;
-            padding: 4px;
+            border: 2px solid #fff;
+            border-radius: 5px;
+            padding: 2px;
             text-align: center;
             cursor: pointer;
-            font-size: 0.35rem;
+            font-size: 0.4375rem;
+            min-width: 50px;
+            min-height: 50px;
+            aspect-ratio: 1/1;
+            display: flex;
+            align-items: center;
+            justify-content: center;
             transition: all 0.2s ease;
             touch-action: manipulation;
         }
@@ -139,7 +145,7 @@
         .drum-pad:hover {
             background: #fff;
             color: #000;
-            box-shadow: 0 0 8px #fff;
+            box-shadow: 0 0 10px #fff;
         }
 
         .drum-pad:active {
@@ -149,26 +155,63 @@
 
         .controls {
             display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(80px, 1fr));
-            gap: 6px;
+            grid-template-columns: repeat(auto-fit, minmax(60px, 1fr));
+            gap: 7.5px;
         }
 
-        button, select, input[type="range"] {
+        button, select {
             background: #1a1a1a;
             color: #fff;
-            border: 1px solid #fff;
-            border-radius: 4px;
-            padding: 4px;
-            font-size: 0.35rem;
+            border: 2px solid #fff;
+            border-radius: 5px;
+            padding: 2px;
+            font-size: 0.4375rem;
+            min-width: 60px;
+            min-height: 60px;
+            aspect-ratio: 1/1;
+            cursor: pointer;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            transition: all 0.2s ease;
+            touch-action: manipulation;
+        }
+
+        input[type="range"] {
+            background: #1a1a1a;
+            border: 2px solid #fff;
+            border-radius: 5px;
+            padding: 2px;
+            width: 60px;
+            height: 20px;
             cursor: pointer;
             transition: all 0.2s ease;
             touch-action: manipulation;
         }
 
+        input[type="range"]::-webkit-slider-thumb {
+            -webkit-appearance: none;
+            width: 15px;
+            height: 15px;
+            background: #fff;
+            border: 1px solid #000;
+            border-radius: 3px;
+            cursor: pointer;
+        }
+
+        input[type="range"]::-moz-range-thumb {
+            width: 15px;
+            height: 15px;
+            background: #fff;
+            border: 1px solid #000;
+            border-radius: 3px;
+            cursor: pointer;
+        }
+
         button:hover, select:hover, input[type="range"]:hover {
             background: #fff;
             color: #000;
-            box-shadow: 0 0 8px #fff;
+            box-shadow: 0 0 10px #fff;
         }
 
         #arp-toggle.active {
@@ -178,35 +221,45 @@
 
         footer {
             text-align: center;
-            font-size: 0.6rem;
-            padding: 8px 0;
+            font-size: 0.75rem;
+            padding: 10px 0;
             color: #ccc;
         }
 
         @media (max-width: 400px) {
             h1 {
-                font-size: 1rem;
+                font-size: 1.25rem;
             }
             h2 {
-                font-size: 0.6rem;
+                font-size: 0.75rem;
             }
             .drum-pads {
-                grid-template-columns: repeat(auto-fit, minmax(50px, 1fr));
+                grid-template-columns: repeat(auto-fit, minmax(40px, 1fr));
             }
             .controls {
-                grid-template-columns: repeat(auto-fit, minmax(70px, 1fr));
+                grid-template-columns: repeat(auto-fit, minmax(50px, 1fr));
             }
-            .drum-pad, button, select, input[type="range"] {
-                font-size: 0.325rem;
-                padding: 3px;
+            .drum-pad {
+                min-width: 40px;
+                min-height: 40px;
+                font-size: 0.4rem;
+            }
+            button, select {
+                min-width: 50px;
+                min-height: 50px;
+                font-size: 0.4rem;
+            }
+            input[type="range"] {
+                width: 50px;
+                height: 18px;
             }
             .visualizer {
-                width: 120px;
-                height: 120px;
+                width: 150px;
+                height: 150px;
             }
             .visualizer::before {
-                width: 6px;
-                height: 6px;
+                width: 8px;
+                height: 8px;
             }
         }
     </style>
@@ -310,8 +363,8 @@
 
         const canvas = document.getElementById('visualizer-canvas');
         const ctx = canvas.getContext('2d');
-        canvas.width = 150;
-        canvas.height = 150;
+        canvas.width = 187.5;
+        canvas.height = 187.5;
         const bufferLength = analyser.frequencyBinCount;
         const dataArray = new Uint8Array(bufferLength);
         const history = [];
@@ -325,9 +378,9 @@
             ctx.fillStyle = 'rgba(0, 0, 0, 0.8)';
             ctx.fillRect(0, 0, canvas.width, canvas.height);
 
-            const barWidth = canvas.width / 15;
-            for (let i = 0; i < 15; i++) {
-                const index = Math.floor((i / 15) * bufferLength);
+            const barWidth = canvas.width / 12;
+            for (let i = 0; i < 12; i++) {
+                const index = Math.floor((i / 12) * bufferLength);
                 const v = dataArray[index] / 128.0;
                 const barHeight = v * canvas.height * 0.5;
 
