--- a/d2.html
+++ b/d2.html
@@ -36,11 +36,12 @@
         }
 
         h1 {
-            font-size: 1.5rem;
+            font-size: 1.875rem;
             text-shadow: 0 0 6.25px #fff;
             letter-spacing: 2.5px;
             text-align: center;
-            padding: 10px 0;
+            padding: 12px 0;
+            line-height: 1.2;
         }
 
         .container {
@@ -49,8 +50,8 @@
             max-width: 100vw;
             display: flex;
             flex-direction: column;
-            gap: 10px;
-            padding: 10px;
+            gap: 12px;
+            padding: 12px;
         }
 
         .visualizer {
@@ -111,15 +112,16 @@
         }
 
         h2 {
-            font-size: 0.875rem;
+            font-size: 1.1rem;
             margin: 0 0 7.5px 0;
             color: #fff;
             text-shadow: 0 0 3.75px #fff;
+            line-height: 1.2;
         }
 
         .drum-pads {
             display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(50px, 1fr));
+            grid-template-columns: repeat(auto-fit, minmax(45px, 1fr));
             gap: 7.5px;
         }
 
@@ -128,18 +130,22 @@
             color: #fff;
             border: 2px solid #fff;
             border-radius: 5px;
-            padding: 2px;
+            padding: 3px;
             text-align: center;
             cursor: pointer;
-            font-size: 0.4375rem;
-            min-width: 50px;
-            min-height: 50px;
-            aspect-ratio: 1/1;
+            font-size: 0.55rem;
+            min-width: 45px;
+            min-height: 22.5px;
+            aspect-ratio: 2/1;
             display: flex;
             align-items: center;
             justify-content: center;
             transition: all 0.2s ease;
             touch-action: manipulation;
+            white-space: nowrap;
+            overflow: hidden;
+            text-overflow: ellipsis;
+            line-height: 1.2;
         }
 
         .drum-pad:hover {
@@ -155,7 +161,7 @@
 
         .controls {
             display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(60px, 1fr));
+            grid-template-columns: repeat(auto-fit, minmax(55px, 1fr));
             gap: 7.5px;
         }
 
@@ -164,17 +170,21 @@
             color: #fff;
             border: 2px solid #fff;
             border-radius: 5px;
-            padding: 2px;
-            font-size: 0.4375rem;
-            min-width: 60px;
-            min-height: 60px;
-            aspect-ratio: 1/1;
+            padding: 3px;
+            font-size: 0.55rem;
+            min-width: 55px;
+            min-height: 27.5px;
+            aspect-ratio: 2/1;
             cursor: pointer;
             display: flex;
             align-items: center;
             justify-content: center;
             transition: all 0.2s ease;
             touch-action: manipulation;
+            white-space: nowrap;
+            overflow: hidden;
+            text-overflow: ellipsis;
+            line-height: 1.2;
         }
 
         input[type="range"] {
@@ -182,8 +192,8 @@
             border: 2px solid #fff;
             border-radius: 5px;
             padding: 2px;
-            width: 60px;
-            height: 20px;
+            width: 55px;
+            height: 18px;
             cursor: pointer;
             transition: all 0.2s ease;
             touch-action: manipulation;
@@ -191,8 +201,8 @@
 
         input[type="range"]::-webkit-slider-thumb {
             -webkit-appearance: none;
-            width: 15px;
-            height: 15px;
+            width: 12px;
+            height: 12px;
             background: #fff;
             border: 1px solid #000;
             border-radius: 3px;
@@ -200,8 +210,8 @@
         }
 
         input[type="range"]::-moz-range-thumb {
-            width: 15px;
-            height: 15px;
+            width: 12px;
+            height: 12px;
             background: #fff;
             border: 1px solid #000;
             border-radius: 3px;
@@ -221,37 +231,37 @@
 
         footer {
             text-align: center;
-            font-size: 0.75rem;
-            padding: 10px 0;
+            font-size: 0.9375rem;
+            padding: 12px 0;
             color: #ccc;
         }
 
         @media (max-width: 400px) {
             h1 {
-                font-size: 1.25rem;
+                font-size: 1.5625rem;
             }
             h2 {
-                font-size: 0.75rem;
+                font-size: 0.9375rem;
             }
             .drum-pads {
-                grid-template-columns: repeat(auto-fit, minmax(40px, 1fr));
+                grid-template-columns: repeat(auto-fit, minmax(35px, 1fr));
             }
             .controls {
-                grid-template-columns: repeat(auto-fit, minmax(50px, 1fr));
+                grid-template-columns: repeat(auto-fit, minmax(45px, 1fr));
             }
             .drum-pad {
-                min-width: 40px;
-                min-height: 40px;
-                font-size: 0.4rem;
+                min-width: 35px;
+                min-height: 17.5px;
+                font-size: 0.5rem;
             }
             button, select {
-                min-width: 50px;
-                min-height: 50px;
-                font-size: 0.4rem;
+                min-width: 45px;
+                min-height: 22.5px;
+                font-size: 0.5rem;
             }
             input[type="range"] {
-                width: 50px;
-                height: 18px;
+                width: 45px;
+                height: 16px;
             }
             .visualizer {
                 width: 150px;
@@ -423,15 +433,18 @@
         function startAudioContext() {
             if (audioContext.state === 'suspended') {
                 audioContext.resume().then(() => {
+                    console.log('AudioContext resumed');
                     drawVisualizer();
-                });
+                }).catch(err => console.error('AudioContext resume failed:', err));
             }
         }
 
         document.addEventListener('click', startAudioContext);
         document.addEventListener('touchstart', startAudioContext);
+        document.addEventListener('touchend', startAudioContext);
 
         function playSound(note, isLoop = false) {
+            console.log(`Playing sound: ${note}`);
             const oscillator = audioContext.createOscillator();
             const gainNode = audioContext.createGain();
             oscillator.connect(gainNode);
@@ -442,7 +455,7 @@
                 case 'ghost-chime':
                     oscillator.type = 'sine';
                     oscillator.frequency.setValueAtTime(600, audioContext.currentTime);
-                    gainNode.gain.setValueAtTime(0.9, audioContext.currentTime);
+                    gainNode.gain.setValueAtTime(0.8, audioContext.currentTime);
                     gainNode.gain.exponentialRampToValueAtTime(0.001, audioContext.currentTime + 2.5);
                     break;
                 case 'distant-rattle':
@@ -454,13 +467,13 @@
                 case 'drip-drone':
                     oscillator.type = 'sine';
                     oscillator.frequency.setValueAtTime(800, audioContext.currentTime);
-                    gainNode.gain.setValueAtTime(0.7, audioContext.currentTime);
+                    gainNode.gain.setValueAtTime(0.8, audioContext.currentTime);
                     gainNode.gain.exponentialRampToValueAtTime(0.001, audioContext.currentTime + 2.0);
                     break;
                 case 'crypt-creak':
                     oscillator.type = 'sawtooth';
                     oscillator.frequency.setValueAtTime(90, audioContext.currentTime);
-                    gainNode.gain.setValueAtTime(0.9, audioContext.currentTime);
+                    gainNode.gain.setValueAtTime(0.8, audioContext.currentTime);
                     gainNode.gain.exponentialRampToValueAtTime(0.001, audioContext.currentTime + 2.5);
                     break;
                 case 'shadow-howl':
@@ -480,7 +493,7 @@
                 case 'void-pulse':
                     oscillator.type = 'square';
                     oscillator.frequency.setValueAtTime(60, audioContext.currentTime);
-                    gainNode.gain.setValueAtTime(1.1, audioContext.currentTime);
+                    gainNode.gain.setValueAtTime(1.0, audioContext.currentTime);
                     gainNode.gain.exponentialRampToValueAtTime(0.001, audioContext.currentTime + 3.0);
                     break;
                 case 'drone-loop1':
@@ -493,20 +506,23 @@
                     oscillator.type = document.getElementById('synth-type').value;
                     oscillator.frequency.setValueAtTime(87.31, audioContext.currentTime);
                     oscillator.frequency.exponentialRampToValueAtTime(174.61, audioContext.currentTime + 5.0);
-                    gainNode.gain.setValueAtTime(0.25, audioContext.currentTime);
+                    gainNode.gain.setValueAtTime(0.3, audioContext.currentTime);
                     break;
                 case 'drone-loop3':
                     oscillator.type = document.getElementById('synth-type').value;
                     oscillator.frequency.setValueAtTime(98.00, audioContext.currentTime);
                     oscillator.frequency.exponentialRampToValueAtTime(196.00, audioContext.currentTime + 3.0);
-                    gainNode.gain.setValueAtTime(0.2, audioContext.currentTime);
+                    gainNode.gain.setValueAtTime(0.3, audioContext.currentTime);
                     break;
                 case 'drone-loop4':
                     oscillator.type = document.getElementById('synth-type').value;
                     oscillator.frequency.setValueAtTime(116.54, audioContext.currentTime);
                     oscillator.frequency.exponentialRampToValueAtTime(233.08, audioContext.currentTime + 6.0);
-                    gainNode.gain.setValueAtTime(0.35, audioContext.currentTime);
+                    gainNode.gain.setValueAtTime(0.3, audioContext.currentTime);
                     break;
+                default:
+                    console.error(`Unknown note: ${note}`);
+                    return;
             }
 
             oscillator.start();
@@ -528,6 +544,7 @@
                         pad.style.background = '#1a1a1a';
                     } else {
                         const { oscillator, gainNode } = playSound(note, true);
+                        if (!oscillator) return; // Handle invalid note
                         const interval = setInterval(() => {
                             gainNode.gain.setValueAtTime(0.001, audioContext.currentTime);
                             gainNode.gain.exponentialRampToValueAtTime(0.3, audioContext.currentTime + 0.2);
@@ -624,6 +641,12 @@
             arpIndex = (arpIndex + 1) % arpPattern.sequence.length;
         }
 
+        const songs = {
+            dungeon: { bpm: 50, density: 0.3, arpMode: 'long' },
+            crypt: { bpm: 40, density: 0.2, arpMode: 'random' },
+            void: { bpm: 60, density: 0.4, arpMode: 'up-down' }
+        };
+
         autoplayButton.addEventListener('click', () => {
             if (!isPlaying) {
                 isPlaying = true;
@@ -693,11 +716,6 @@
                 updateArp();
             }
         });
-
-        const aMinorScale = [
-            65.41, 73.42, 77.78, 87.31, 98.00, 103.83, 116.54,
-            130.81, 138.59, 155.56, 174.61, 196.00, 207.65, 233.08
-        ];
     </script>
 </body>
 </html>
